--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint ./src/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "e2e": "cypress open"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -18,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.4.0",
     "eslint": "^8.53.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
