--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-jest": "^29.7.0",
     "cypress": "^13.4.0",
     "eslint": "^8.53.0",
+    "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
