--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "cicdgallery",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://sgayathrii.github.io/CICDGallery/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint ./src/*.ts",
     "test": "jest",
-    "e2e": "cypress open"
+    "e2e": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -21,6 +24,7 @@
     "babel-jest": "^29.7.0",
     "cypress": "^13.4.0",
     "eslint": "^8.53.0",
+    "gh-pages": "^6.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
